--- a/Changes
+++ b/Changes
@@ -3,3 +3,9 @@ Revision history for Perl extension Switch.
 0.01  Wed Dec 15 05:58:01 1999
 	- original version; created by h2xs 1.18
 
+
+
+2.00	Mon Jan  8 17:12:20 2001
+
+	- Complete revamp (including syntactic and semantic changes)
+	  in line with proposed Perl 6 semantics.
