--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ==============================================================================
-                      Release of version 2.00 of Switch
+                      Release of version 2.01 of Switch
 ==============================================================================
 
 
@@ -27,11 +27,13 @@ COPYRIGHT
 
 ==============================================================================
 
-CHANGES IN VERSION 2.00
+CHANGES IN VERSION 2.01
 
 
-	- Complete revamp (including syntactic and semantic changes)
-	  in line with proposed Perl 6 semantics.
+	- Fixed infinite loop problem under 5.6.0 caused by change
+	  in goto semantics between 5.00503 and 5.6.0
+	  (thanks Scott!)
+	  
 
 
 ==============================================================================
