--- a/Changes
+++ b/Changes
@@ -17,3 +17,12 @@ Revision history for Perl extension Switch.
 	  in goto semantics between 5.00503 and 5.6.0
 	  (thanks Scott!)
 	  
+
+
+2.02	Thu Apr 26 12:01:06 2001
+
+	- Fixed unwarranted whitespace squeezing before quotelikes
+	  (thanks Ray)
+
+	- Fixed pernicious bug that cause switch to fail to recognize
+	  certain complex switch values
