--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ==============================================================================
-                      Release of version 2.01 of Switch
+                      Release of version 2.02 of Switch
 ==============================================================================
 
 
@@ -27,13 +27,14 @@ COPYRIGHT
 
 ==============================================================================
 
-CHANGES IN VERSION 2.01
+CHANGES IN VERSION 2.02
 
 
-	- Fixed infinite loop problem under 5.6.0 caused by change
-	  in goto semantics between 5.00503 and 5.6.0
-	  (thanks Scott!)
-	  
+	- Fixed unwarranted whitespace squeezing before quotelikes
+	  (thanks Ray)
+
+	- Fixed pernicious bug that cause switch to fail to recognize
+	  certain complex switch values
 
 
 ==============================================================================
