--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ==============================================================================
-                      Release of version 2.02 of Switch
+                      Release of version 2.03 of Switch
 ==============================================================================
 
 
@@ -27,14 +27,13 @@ COPYRIGHT
 
 ==============================================================================
 
-CHANGES IN VERSION 2.02
+CHANGES IN VERSION 2.03
 
 
-	- Fixed unwarranted whitespace squeezing before quotelikes
-	  (thanks Ray)
+	- Fixed bug in 'fallthrough' specifications.
 
-	- Fixed pernicious bug that cause switch to fail to recognize
-	  certain complex switch values
+	- Silenced gratuitous warnings for undefined values as
+	  switch or case values
 
 
 ==============================================================================
