import Switch 2.04 from CPAN
git-cpan-module:   Switch
git-cpan-version:  2.04
git-cpan-authorid: DCONWAY
git-cpan-file:     authors/id/D/DC/DCONWAY/Switch-2.04.tar.gz

--- a/Changes
+++ b/Changes
@@ -34,3 +34,10 @@ Revision history for Perl extension Switch.
 
 	- Silenced gratuitous warnings for undefined values as
 	  switch or case values
+
+
+2.04	Mon Jul 30 13:17:35 2001
+
+	- Suppressed 'undef value' warning under -w (thanks Michael)
+
+	- Added support for Perl 6 given..when syntax
