import Switch 2.05 from CPAN
git-cpan-module:   Switch
git-cpan-version:  2.05
git-cpan-authorid: DCONWAY
git-cpan-file:     authors/id/D/DC/DCONWAY/Switch-2.05.tar.gz

--- a/Changes
+++ b/Changes
@@ -41,3 +41,10 @@ Revision history for Perl extension Switch.
 	- Suppressed 'undef value' warning under -w (thanks Michael)
 
 	- Added support for Perl 6 given..when syntax
+
+
+2.05	Mon Sep  3 08:13:25 2001
+
+	- Changed licence for inclusion in core distribution
+
+	- Added new test file for non-fallthrough and nested switches
