--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ==============================================================================
-                      Release of version 2.10 of Switch
+                      Release of version 2.11 of Switch
 ==============================================================================
 
 
@@ -20,18 +20,18 @@ AUTHOR
     Maintained by Rafael Garcia-Suarez (rgarciasuarez@free.fr)
 
 COPYRIGHT
-    Copyright (c) 1997-2003, Damian Conway. All Rights Reserved.
+    Copyright (c) 1997-2006, Damian Conway. All Rights Reserved.
     This module is free software. It may be used, redistributed
         and/or modified under the same terms as Perl itself.
 
 
 ==============================================================================
 
-CHANGES IN VERSION 2.10
+CHANGES IN VERSION 2.11
 
 
-	- Introduce the "default" keyword for the Perl 6 syntax
-	- Raise the limitation on source file length to 1 million characters
+	- Fix documentation issues
+	- Fix installation directory for perls >= 5.7.3 (Slaven Rezic)
 
 
 ==============================================================================
