--- a/Changes
+++ b/Changes
@@ -84,3 +84,7 @@ Revision history for Perl extension Switch.
 
 	- Fix documentation issues
 	- Fix installation directory for perls >= 5.7.3 (Slaven Rezic)
+
+2.12	Mon Dec 11 2006
+
+	- Fix bug in parsing POD at end of document (Valentin Guignon)
