import Switch 2.13 from CPAN
git-cpan-module:   Switch
git-cpan-version:  2.13
git-cpan-authorid: RGARCIA
git-cpan-file:     authors/id/R/RG/RGARCIA/Switch-2.13.tar.gz

--- a/Changes
+++ b/Changes
@@ -88,3 +88,7 @@ Revision history for Perl extension Switch.
 2.12	Mon Dec 11 2006
 
 	- Fix bug in parsing POD at end of document (Valentin Guignon)
+
+2.13	Sun Feb 25 2007
+
+	- Fix bug in parsing division statements (Wolfgang Laun)
