--- a/Changes
+++ b/Changes
@@ -119,3 +119,8 @@ Revision history for Perl extension Switch.
 2.16    Fri Oct 23 2009
         - For Perl 5.11+, install into 'site', not 'perl'
 
+2.17  2014-03-18
+        - tests fixed
+        - patch by Father Chrysostomos
+        - many warnings
+        - recommendation to use given/when
