--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 ==============================================================================
-                      Release of version 2.16 of Switch
+                      Release of version 2.17 of Switch
 ==============================================================================
 
 
 NAME
-    Switch - A switch statement for Perl
+    Switch - A switch statement for Perl, do not use if you can use given/when
 
 DESCRIPTION
 
@@ -17,8 +17,8 @@ DESCRIPTION
 
 AUTHOR
     Damian Conway (damian@conway.org)
-    Maintained by Rafael Garcia-Suarez (rgarciasuarez@gmail.com)
-    and the Perl 5 porters (perl5-porters@gmail.com)
+    Maintained by Alexandr Ciornii (alexchorny@gmail.com)
+    Previously was maintained by Rafael Garcia-Suarez and perl5 porters.
 
 COPYRIGHT
     Copyright (c) 1997-2008, Damian Conway. All Rights Reserved.
